WIP Using Kotlin abstract class to manage MecanumDrive and DriveConstant files

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,3 +19,9 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
