--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,3 +21,9 @@ repositories {
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
