--- a/build.common.gradle
+++ b/build.common.gradle
@@ -107,4 +107,16 @@ repositories {
         dirs rootProject.file('libs')
     }
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+        apiVersion = '1.1'
+        languageVersion = '1.1'
+    }
+}
+
 apply from: 'build.release.gradle'
