--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -8,4 +8,5 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.3'
     implementation 'com.acmerobotics.dashboard:dashboard:0.3.10'
+    implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21'
 }
