WIP Changed gradle files slightly to allow Java files to import Kotlin filesC

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -8,11 +8,17 @@
 // please think carefully as to whether such customizations are really necessary
 // before doing so.
 
-
 // Custom definitions may go here
 
 // Include common definitions from above.
+
+
 apply from: '../build.common.gradle'
+apply plugin: 'kotlin-android'
+
+repositories {
+    jcenter()
+}
 
 repositories {
     maven { url = "https://dl.bintray.com/first-tech-challenge/ftcsdk/" }
@@ -20,10 +26,4 @@ repositories {
 
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
 }
