--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,3 +29,27 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
+android {
+    packagingOptions {
+        exclude 'kotlin/coroutines/coroutines.kotlin_builtins'
+        exclude 'kotlin/reflect/reflect.kotlin_builtins'
+        exclude 'kotlin/collections/collections.kotlin_builtins'
+        exclude 'kotlin/internal/internal.kotlin_builtins'
+        exclude 'META-INF/daemon-common.kotlin_module'
+        exclude 'META-INF/metadata.kotlin_module'
+        exclude 'META-INF/descriptors.runtime.kotlin_module'
+        exclude 'META-INF/descriptors.kotlin_module'
+        exclude 'META-INF/deserialization.kotlin_module'
+        exclude 'META-INF/kotlin-util-io.kotlin_module'
+        exclude 'META-INF/util.runtime.kotlin_module'
+        exclude 'META-INF/compiler.common.jvm.kotlin_module'
+        exclude 'META-INF/metadata.jvm.kotlin_module'
+        exclude 'META-INF/descriptors.jvm.kotlin_module'
+        exclude 'kotlin/kotlin.kotlin_builtins'
+        exclude 'META-INF/compiler.common.kotlin_module'
+        exclude 'kotlin/ranges/ranges.kotlin_builtins'
+        exclude 'META-INF/kotlin-build-common.kotlin_module'
+        exclude 'META-INF/kotlin-util-klib.kotlin_module'
+        exclude 'kotlin/annotation/annotation.kotlin_builtins'
+    }
+}
