--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21'
     }
 }
 
@@ -67,4 +67,3 @@ task extractJavadoc {
         }
     }
 }
-
