--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,6 +17,11 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 apply plugin: 'kotlin-android'
 
+android {
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
 
 dependencies {
     implementation project(':FtcRobotController')
@@ -29,9 +34,6 @@ dependencies {
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-
-    // We need to add the Kotlin stdlib in order to use most Kotlin language features.
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
 // Simulation configuration (e.g. environment variables).
