--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
+.idea/misc.xml
 .idea/dictionaries
 .idea/libraries
 # Android Studio 3 in .gitignore file.
@@ -89,3 +90,5 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+.DS_Store
