Updated gradle version to 6.5

--- a/build.common.gradle
+++ b/build.common.gradle
@@ -18,9 +18,14 @@
 import java.util.regex.Pattern
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     signingConfigs {
         release {
@@ -103,11 +108,6 @@ android {
                 abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     sourceSets.main {
