--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 android.jetifier.blacklist = kotlin.*\\.jar
+
+kotlin.setJvmTargetFromAndroidCompileOptions = false
